<resources>
    <string name="app_name">WifiScanTest</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ip">IP</string>
    <string name="port">PORT</string>
    <string name="name">NAME</string>
    <string name="button1">Connect!</string>
    <string name="button2">Disconnect!</string>
    <string name="button3">Set Server!</string>
    <string name="button4">close Server!</string>
    <string name="button5">View info!</string>
    <string name="button6">Msg</string>
    <string name="title_activity_google_map">Map</string>
    <string name="title_activity_maps">Map</string>
</resources>

